--- a/young.html
+++ b/young.html
@@ -23,7 +23,7 @@
                 </nav>     
             </div>
         </div>
-      <div class="body-container">
+     <!--  <div class="body-container">-->
         <div class="young">
             <pre> 
                <h1><b>WELCOME TO YOUNG ACCELERATE NETWORK</b>
