--- a/young.html
+++ b/young.html
@@ -8,27 +8,24 @@
       " crossorigin="anonymous"/>
         <title>Young Acceleration</title>
     </head>
-    <body>
-        <div class="fixed-header">
-            <div class="container">
-                <nav id="nav">
-                    <li><a href="#"><i class="fa fa-bars"></i></a>
-                       <ul>
-                          <li><a href="#">HOME </a></li>
-                          <li><a href="#">ABOUT </a></li>
-                          <li><a href="#">CONTACT US </a></li>
-                          <li><a href="#">APPLICATIONS </a></li>
-                       </ul> 
-                    </li>
-                </nav>     
-            </div>
+    <header>
+        <div class="topnav">
+            <li style="float: left">
+            <img src="" height="60" width="200px"/></li>
+
+            <li style="float: right;"> <a href="#">HOME</a>
+                <a href="#">ABOUT US</a>
+                <a href="#">CONTACT US</a>
+                <a href="#">APPLICATIONS</a>
+            </li>
         </div>
-     <!--  <div class="body-container">-->
-        <div class="young">
-            <pre> 
-               <h1><b>WELCOME TO YOUNG ACCELERATE NETWORK</b>
-     <small>THE FUTURE OF OUR YOUNG ONES IS OUR CONCERN </small></h1>
-            </pre>
+    </header>
+    <body>
+        <div class="young"> 
+            <div class="young-text">
+              <h2> WELCOME TO YOUNG ACCELERATE NETWORK </h2>
+              <h3> THE FUTURE OF OUR YOUNG ONES IS OUR CONCERN </h3>
+            </div>
         </div>
         <div class="who">
            <h2>WHO WE ARE</h2>
