--- a/young.html
+++ b/young.html
@@ -33,7 +33,7 @@
            <p style="font-size:20px; text-align:center; color: rgb(18, 73, 18); margin: 0;">
              Our value proposition is to secure the future of young generations in every good aspect of life.
            </p>
-        <div class="designbox"  style="float: left;">
+        <div class="designbox" style="text-align: center;">
            <pre>
                 <b style="text-align: center;">Our Vision</b>
                (1) To have a generation of children who are
@@ -48,7 +48,7 @@
                     own capabilities. 
           </pre>
         </div>
-         <div class="designbox" style="float: left;">
+         <div class="designbox"style="text-align: center;">
             <pre>
                 <b style="text-align: center;">Our Mission</b>
                 (1) To orientate their mindset on greatness, 
@@ -60,7 +60,7 @@
                  law of Echo in leadership.   
            </pre>
          </div> 
-         <div class="designbox"  style="float: right;">
+         <div class="designbox" style="text-align: center;">
             <pre>
                 <b style="text-align: center;">our plan</b>
                 To train children who are willing to learn 
